# fluent-downloader

./: .gitignore  CONTRIBUTING.md  LICENSE  components.json  package.json  pnpm-lock.yaml  tailwind.config.cjs  tailwind.config.ts  test.ts  tsconfig.json  vite.config.ts
src/: App.bak.tsx  App.tsx  global.css  index.html  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/conf/: aria.conf
src-tauri/src/: main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/add/: page.tsx
src/app/downloaded/: page.tsx
src/app/downloading/: page.tsx
src/components/: add-download.tsx  columns.tsx  data-table.tsx  icons.tsx  sidebar.tsx
src/components/ui/: button.tsx  dialog.tsx  download-cards.tsx  dropdown-menu.tsx  input.tsx  label.tsx  progress.tsx  separator.tsx  side-bar.tsx  table.tsx  tabs.tsx  theme-provider.tsx  window-bar.tsx
src/layouts/: root-layout.tsx
src/lib/: aria2.ts  utils.ts
src/lib/validations/: url.ts
src/pages/: downloaded.tsx  downloading.tsx  index.tsx  settings.tsx  ytdl.tsx
src/screens/: all.tsx  downloaded.tsx  downloading.tsx  index.ts  index.tsx  settings.tsx  ytdlp.tsx
src/types/: index.ts
src/windows/add-task/: app.tsx  index.html  main.tsx
