[package]
name = "app"
version = "0.1.0"
description = "A simple download manager for Windows 11"
authors = ["Sayed Ahmed"]
license = "MIT"
repository = "https://github.com/sayeed205/fluent-downloader"
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4.0", features = [ "shell-open", "path-all", "shell-sidecar", "window-show", "window-start-dragging", "window-close", "window-minimize", "window-maximize", "window-hide", "window-unminimize", "window-unmaximize", "process-command-api"] }
window-vibrancy = "0.4.0"
window-shadows = "0.2.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
